--- a/guitar-shop/package.json
+++ b/guitar-shop/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
+    "mongoose": "^6.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -24,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "nodemon": "nodemon server/server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "tailwindcss": "^3.2.4"
   }
 }
